name:                PiServer
version:             0.1.1
synopsis:            A FAAS (Function as a service) Server computing PI up to arbitrary precision.
description:         Implementation based on HasBigDecimals + OpenFaas

homepage:            https://github.com/thma/PiServer#readme
license:             Apache-2.0
license-file:        LICENSE
author:              Thomas Mahler
maintainer:          thma@apache.org
copyright:           2018 Thomas Mahler
category:            Math
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable piServer
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , HasBigDecimal >= 0.1.1
  hs-source-dirs:      src
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/thma/PiServer
